--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ blockquote {
 .newSize{
   color: hsl(0, 0%, 4%);
   font-size:2.1em ;
+  cursor: pointer
 
 }
 
@@ -82,11 +83,6 @@ blockquote {
   margin: 10px;
 }
 
-.tageach {
-  
-  display: inline-block;
-  margin: 10px;
-}
 
 
 #example {
@@ -98,18 +94,17 @@ blockquote {
   
   max-height: 80vh;
   max-width: 33vw;
+}
 
-
+.created-by {
+  font-size: 1 vw;
 }
 
 @media only screen and (max-width: 600px) {
   #instructions {
     max-height: 80vh;
     max-width: 85vw;
-  
   }
-  
-  
   
   body {
     margin-top: 0px;
